@@ -4,9 +4,9 @@
 #define str__(x) #x
 #define str_(x) str__(x)
 
-#define VERSION_MAJOR 5
-#define VERSION_MINOR 9
-#define VERSION_REV   29
+#define VERSION_MAJOR 6
+#define VERSION_MINOR 0
+#define VERSION_REV   0
 #define BETA "-beta"
 
 #define VERSIONSTR version_string
