@@ -1,6 +1,7 @@
 Version 5.9.29
 - Fixed _ assignment in nucode output
 - Fixed calculation of FVAR/FVARS when labels are unknown
+- Fixed a problem with unnamed parameters not being counted in code generation
 - Made Spin2 loop behaviour match that of other languages (like PNut v38)
 - Some internal cleanups in the code generators
 
